// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Component base should return a Card with base styling 1`] = `
.c0 {
  box-sizing: border-box;
  background: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-bottom: 4px;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  box-sizing: border-box;
  padding-right: 8px;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding: 8px;
}

.c9 {
  box-sizing: border-box;
  padding-bottom: 8px;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
  padding-bottom: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-top: 8px;
}

.c11 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
}

.c6 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.25rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-bottom: 0;
  margin-top: 0;
}

.c7 {
  color: hsl(0,0%,50%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-bottom: 0;
  margin-top: 0;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c0 {
    margin-bottom: 8px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c2 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c4 {
    padding-right: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c8 {
    padding: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c9 {
    padding-bottom: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c10 {
    padding-bottom: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c3 {
    padding-bottom: 16px;
    padding-top: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c11 {
    padding-bottom: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

<div
  className="c0 "
>
  <div
    className="c1"
  >
    cardRichMedia
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        cardThumbnail
      </div>
      <div
        className="c5"
      >
        <h5
          className="c6"
        >
          cardTitle
        </h5>
        <p
          className="c7"
        >
          cardSubtitle
        </p>
      </div>
    </div>
    
    <div
      className="c8"
    >
      I am a child.
    </div>
  </div>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      cardSecondaryMedia
    </div>
    <div
      className="c2"
    >
      cardBody
    </div>
  </div>
  <div
    className="c11"
  >
    cardActions
    <div
      className="c5"
    >
      cardActionsLeft
    </div>
    <div
      className="c5"
    >
      cardActionsRight
    </div>
  </div>
</div>
`;

exports[`Box Component base should return a Card with nuances 1`] = `
.c0 {
  box-sizing: border-box;
  background: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-bottom: 4px;
}

.c1 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding-top: 8px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c0 {
    margin-bottom: 8px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c1 {
    padding-bottom: 16px;
    padding-top: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c4 {
    padding-top: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c5 {
    padding-bottom: 16px;
  }
}

<div
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      
      <div
        className="c3"
      >
        
        
      </div>
    </div>
    <div
      className="c4"
    >
      Card Body
    </div>
    
  </div>
  <div
    className="c5"
  >
    <div
      className="c3"
    >
      Card Actions Right
    </div>
  </div>
</div>
`;

exports[`Box Component base should return a Card with objects in title 1`] = `
.c0 {
  box-sizing: border-box;
  background: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-bottom: 4px;
}

.c1 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c0 {
    margin-bottom: 8px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c1 {
    padding-bottom: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c2 {
    padding-top: 16px;
  }
}

<div
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      
      <div
        className="c3"
      >
        <div
          className="c3"
        >
          <div />
        </div>
        <div
          className="c3"
        >
          <div />
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`Box Component base should return an empty Card 1`] = `
.c0 {
  box-sizing: border-box;
  background: white;
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-bottom: 4px;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {
  .c0 {
    margin-bottom: 8px;
  }
}

<div
  className="c0 "
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      
      <div
        className="c1"
      >
        
        
      </div>
    </div>
    
  </div>
  
</div>
`;
